--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
 
-    <title>Blake Thollaug's Portfolio</title>
+    <title>Blake Thollaug's Portfolio Website</title>
   </head>
   <body>
     <div id="root"></div>
