dark theme design

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 
     <title>Blake Thollaug's Portfolio Website</title>
   </head>
-  <body class="color-theme-normal">
+  <body>
     <div id="root"></div>
   </body>
 </html>
